--- a/.gitignore
+++ b/.gitignore
@@ -29,11 +29,15 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
-Visual Studio Code directory
-.vscode
-
 # Visual Studio 2017 auto generated files
 Generated\ Files/
+
+Visual Studio Code gitignore
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
